# wheelchair

wheelchair_bringup/: CMakeLists.txt  package.xml
wheelchair_bringup/config/: wheelchair.rviz
wheelchair_bringup/launch/: calib_cam_camcal.launch  webcam.launch  wheelchair_bringup.launch
wheelchair_bringup/scripts/: interfaccia.sh
wheelchair_bringup/src/: automatic.cpp  comando.cpp  goal_setting.cpp  robot_setup_tf.cpp
wheelchair_control/: CMakeLists.txt  package.xml
wheelchair_control/config/: diff_drive_controller.yaml
wheelchair_control/launch/: keyboard_teleop.launch
wheelchair_control/scripts/: diff_wheeled_robot_key.py
wheelchair_control/wheelchair_control/: CMakeLists.txt  package.xml
wheelchair_control/wheelchair_control/config/: diff_drive_controller.yaml  gazebo_ros_control_controller.yaml
wheelchair_control/wheelchair_gazebo_interface/: CMakeLists.txt  package.xml  plugin.xml
wheelchair_control/wheelchair_gazebo_interface/include/wheelchair_gazebo_interface/: sample_interface.h
wheelchair_control/wheelchair_gazebo_interface/src/: sample_interface.cpp
wheelchair_control/wheelchair_sample_controllers/: CMakeLists.txt  package.xml  plugin.xml
wheelchair_control/wheelchair_sample_controllers/config/: joint_state_controller.yaml  sample_diff_controller.yaml  sample_effort_controller.yaml
wheelchair_control/wheelchair_sample_controllers/include/wheelchair_sample_controllers/: sample_diff_controller.h  sample_effort_controller.h
wheelchair_control/wheelchair_sample_controllers/src/: sample_diff_controller.cpp  sample_effort_controller.cpp
wheelchair_description/: CMakeLists.txt  package.xml
wheelchair_description/config/: wchair.rviz  wheelchair_base.rviz  wheelchair_nav.rviz  wheelchair_navigation.rviz  wheelchair_odometry.rviz
wheelchair_description/launch/: wheelchair_upload.launch
wheelchair_description/urdf/: c.urdf.xacro  camera.xacro  t.urdf.xacro  w.urdf.xacro  wchair.urdf  wchair.xacro  wheelchair.xacro  wheelchair_body.xacro  wheelchair_gazebo.xacro  wheelchair_property.xacro  wheelchair_property_old.xacro  wheelchair_sensors.xacro  wheelchair_transmission.xacro  wheelchair_wheels.xacro
wheelchair_gazebo/: CMakeLists.txt  package.xml
wheelchair_gazebo/launch/: edge_detection.launch  hough_lines.launch  localization.sh  prova.launch  wchair_nav.launch  wchair_rviz.launch  wchair_visp.launch  webcam-gaz.launch  webcam.launch  wheelchair_control.launch  wheelchair_gazebo.launch  wheelchair_localization.launch  wheelchair_navigation.launch  wheelchair_sample_controller_demo.launch  wheelchair_simulation.launch
wheelchair_gazebo/worlds/: calibration.world  dipartimento.world  laboratorio-ceiling.world  laboratorio.world  navigation-rooms-indigo-v1.world  test.world
wheelchair_gazebo/worlds/models/qr_code/materials/scripts/: qr_code_3.material
wheelchair_gazebo/worlds/models/qr_code_calibration/: model.config
wheelchair_gazebo/worlds/models/qr_code_calibration/materials/scripts/: qr_calibration.material
wheelchair_gazebo/worlds/models/qr_code_dipartimento/: Guida generazione qr code.txt  model.sdf
wheelchair_gazebo/worlds/models/qr_code_dipartimento/materials/scripts/: qr_code_2.material
wheelchair_gazebo/worlds/models/qr_code_laboratorio/: QR code Info.txt  model.config  model.sdf
wheelchair_gazebo/worlds/models/qr_code_laboratorio/materials/scripts/: qr_code_0.material  qr_code_1.material  qr_code_4.material  qr_code_5.material  qr_code_6.material  qr_code_7.material
wheelchair_gazebo/worlds/models/trave_lunga/: model.config  model.sdf
wheelchair_gazebo/worlds/qr_code/: model.sdf
wheelchair_gazebo/worlds/qr_code/materials/scripts/: qr_code_8.material
wheelchair_gazebo/worlds/qr_code_calibration/: model.sdf
wheelchair_gazebo/worlds/test/: model.sdf  pose_qr_code.txt
wheelchair_gazebo/worlds/trave_corta/: model.config  model.sdf
wheelchair_localization/: CMakeLists.txt  package.xml
wheelchair_localization/file/: Errore.m  UKFodom.txt  encoder.m  encoder_imu.m  predizione.txt
wheelchair_msgs/: CMakeLists.txt  package.xml
wheelchair_navigation/: CMakeLists.txt  package.xml
wheelchair_navigation/file/: QRodom.txt  UKFQRodom.txt  qrcode.m
wheelchair_navigation/file/nuovi/81/: QRodom.txt
wheelchair_navigation/file/nuovi/82/: QRodom.txt  UKFQRodom.txt  UKFodom.txt
wheelchair_navigation/file/nuovi/Q1/: UKFQRodom.txt  UKFodom.txt  confrontiXY.m
wheelchair_navigation/launch/: amcl.launch  ekf_global.launch  ekf_local.launch  ekf_odom.launch  gmapping.launch  map_server.launch
wheelchair_navigation/maps/dipartimento/: dipartimento.pgm  dipartimento.yaml
wheelchair_navigation/maps/empty_world/: empty_world.yaml
wheelchair_navigation/maps/lab_world/: lab_world.yaml
wheelchair_navigation/maps/laboratorio/: laboratorio.pgm  laboratorio.yaml
wheelchair_navigation/maps/small_office/: small_office.pgm  small_office.yaml
wheelchair_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf_global_amcl.yaml  ekf_global_amcl_qr.yaml  ekf_global_qr.yaml  ekf_local.yaml  local_costmap_params.yaml
wheelchair_navigation/scripts/: ground_truth_transform_broadcaster.py  map_server_launch.py  qr_reader.py
wheelchair_navigation/src/: ukf_qr_sim.cpp  ukf_sim.cpp  ukf_sim.cpp~  ukf_solo_qr_sim.cpp  velocity_from_bf_to_map.cpp  wheel_odometry.cpp
wheelchair_sensors/camera_sensor/: CMakeLists.txt  guida_calibrazione.txt  package.xml
wheelchair_sensors/camera_sensor/calibrationdata/: ost.txt  ost.yaml
wheelchair_sensors/camera_sensor/models/QRcode_pattern/: pattern.cao  pattern.cfg  pattern.xml
wheelchair_sensors/wheelchair_camera/: CMakeLists.txt  guida_calibrazione.txt  package.xml
wheelchair_sensors/wheelchair_camera/calibrationdata/: ost.txt  ost.yaml
wheelchair_sensors/wheelchair_sensors/: CMakeLists.txt  package.xml
wheelchair_sensors/wheelchair_sensors/file/: imu.m  imuData.txt  joint.m  jointData.txt  qrData.txt
wheelchair_sensors/wheelchair_sensors/src/: read_image.cpp  read_pos_ag.cpp  read_qr_code.cpp  read_sensors.cpp
(+15 files in other folders)
