<?xml version="1.0"?>
<package format="2">
	<name>wheelchair_bringup</name>
	<version>0.0.0</version>
	<description>The wheelchair_bringup package</description>

	<maintainer email="daniele@todo.todo">daniele</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>tf</depend>
	<depend>tf2_ros</depend>
	<depend>std_msgs</depend>

	<export>
	</export>
</package>
