<?xml version="1.0"?>
<package>
	<name>wheelchair_gazebo</name>
	<version>0.0.0</version>
	<description>The wheelchair_gazebo package</description>

	<maintainer email="daniele@todo.todo">daniele</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<export>

	</export>
</package>
