<?xml version="1.0"?>
<package>
	<name>wheelchair_gazebo</name>
	<version>0.0.0</version>
	<description>The wheelchair_gazebo package</description>

	<maintainer email="daniele@todo.todo">daniele</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<run_depend>gazebo_ros</run_depend>
	<build_depend>gazebo_ros</build_depend>

	<export>
		<gazebo_ros gazebo_model_path="${prefix}/worlds" />
	</export>
</package>
