<?xml version="1.0"?>
<package format="2">
	<name>wheelchair_gazebo</name>
	<version>0.0.0</version>
	<description>The wheelchair_gazebo package</description>

	<maintainer email="daniele@todo.todo">daniele</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>gazebo_ros</depend>

	<export>
		<gazebo_ros gazebo_model_path="${prefix}/worlds/models" />
	</export>
</package>
