<?xml version="1.0"?>
<package>
  <name>wheelchair_gazebo_interface</name>
  <version>0.0.0</version>
  <description>The wheelchair_sample_interface package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>


  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>
  
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>angles</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros_control plugin="${prefix}/plugin.xml"/>
  </export>
</package>