<?xml version="1.0"?>
<package>
  <name>wheelchair_sample_controllers</name>
  <version>0.0.0</version>
  <description>The wheelchair_sample_controllers package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.14.0">control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>wheelchair_msgs</build_depend>

  <run_depend version_gte="1.14.0">control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>wheelchair_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
