<?xml version="1.0"?>
<package>
	<name>camera_sensor</name>
	<version>0.0.0</version>
	<description>The camera_sensor package</description>

	<maintainer email="daniele@todo.todo">daniele</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<export>
	</export>
</package>
