<?xml version="1.0"?>
<package>
  <name>wheelchair_sensors</name>
  <version>0.0.0</version>
  <description>The wheelchair_sensors package</description>

  <maintainer email="daniele@todo.todo">daniele</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
