<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_sensors</name>
  <version>0.0.0</version>
  <description>The wheelchair_sensors package</description>

  <maintainer email="daniele@todo.todo">daniele</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>

  <export>
  </export>
</package>
